Link index with search

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -46,7 +46,7 @@
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Partir en...">
               <span class="input-group-btn">
-                  <button class="btn btn-default" type="button">Go!</button>
+                  <a href="{{ path('edu_speak_search')}}"><button class="btn btn-default" type="button">Go!</button></a>
               </span>
           </div>
           <p>"pratiquez comme si vous y étiez"</p>
