Ajout de la transparence et de la position du navra
Reste à améliorer le box shadow que je n’ai pas enlevé
Il suffit d’une barre blanche en dessous a place d’une box

--- a/web/front/less/navbar.less
+++ b/web/front/less/navbar.less
@@ -7,6 +7,14 @@
 //
 // Provide a static navbar from which we expand to create full-width, fixed, and
 // other navbar variations.
+.navbar-accueil{
+    background: transparent!important;
+    border-bottom: none!important;
+    z-index: 1000!important;
+    width: 100%!important;
+    position: absolute!important;
+    color:white!important;
+}
 
 .navbar {
   position: relative;
