--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,7 +16,7 @@
         <div class="container">
             {% if app.security.token is not null and is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                 <div class="row">
-                    <nav class="navbar navbar-default">
+                    <nav class="navbar navbar-default navbar-accueil">
                         <div class="container-fluid">
                             <!-- Brand and toggle get grouped for better mobile display -->
                             <div class="navbar-header">
