Amélioration de l'opacité
Texte de more scroll en blanc
changement index du backgground color
mise en place d’une div « mon opacité »

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -10,6 +10,7 @@
 
     {#____________________________Carousel___________________________________#}
       <div id="myCarousel" class="row carousel slide" data-ride="carousel">
+        <div class="monopacite"></div>
         <!-- Indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
