--- a/web/front/less/carousel.less
+++ b/web/front/less/carousel.less
@@ -273,7 +273,6 @@
 .more-scroll{
 border: none;
 bottom: 0;
-color: inherit;
 font-size: 0.8em;
 height: 8.5em;
 left: 50%;
@@ -284,9 +283,10 @@ outline: 0;
 padding-left: 0.225em;
 position: absolute;
 text-align: center;
+color: white;
 text-transform: uppercase;
 width: 16em;
-z-index: 1;
+z-index: 10;
 }
 
 }
