--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -81,4 +81,14 @@ img {
       }
     }
   }
+
+    .monopacite{
+      background-color: black;
+      z-index: 7;
+      width: 100%;
+      height: 72rem;
+      position: absolute;
+      opacity: 0.4;
+      top: 0;
+    }
 }
