Mise en place de la même barre de menu lors de non register

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -55,7 +55,7 @@
                 </div>
             {% else %}
                 <div class="row">
-                    <div class="navbar navbar-default">
+                    <div class="navbar navbar-default navbar-accueil">
                         <div class="container-fluid">
                             <img class="eduspeak-logo" src="{{ asset('image/speakit.png') }}" alt="SpeakIt!" />
                             <a class="navbar-brand" href="/">SpeakIt!</a>
