--- a/web/front/less/variables.less
+++ b/web/front/less/variables.less
@@ -396,8 +396,8 @@
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 
 // Navbar links
-@navbar-default-link-color:                #514d4d;
-@navbar-default-link-hover-color:          #514d4d;
+@navbar-default-link-color:                white;
+@navbar-default-link-hover-color:          none;
 @navbar-default-link-hover-bg:             transparent;
 @navbar-default-link-active-color:         #3d3030;
 @navbar-default-link-active-bg:            #edefed;
