footer correction bug + v2

--- a/web/front/less/eduspeak/footer.less
+++ b/web/front/less/eduspeak/footer.less
@@ -27,3 +27,48 @@
   -o-transition: all ease 0.3s;
   -ms-transition: all ease 0.3s;
 }
+
+.container {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  margin: 0 auto -em;
+}
+.footer {
+  margin-top: 10px;
+  //height: 4em;
+  background: #282D2E ;
+  padding: 5px;
+}
+
+.afoot{
+  text-decoration: none;
+  font-weight: bold;
+  color:white;
+}
+
+.afoot:hover{
+  text-decoration:none;
+  color:grey;
+}
+
+.hlink{
+  font-weight: bold;
+  color:white;
+}
+
+.icircle{
+  color:#282D2E;
+  border:1px solid white;
+  border-radius:30px;
+}
+
+
+a:hover .icircle{
+  color:grey;
+
+}
+
+
+
+
