--- a/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
@@ -1,12 +1,12 @@
 {% trans_default_domain 'FOSUserBundle' %}
-
+{{ form_start(form) }}
 <div id="edu-profile" class="fos_user_user_edit full-height">
     <div id="edu-profile-row" class="row full-height">
         <div id="edu-profile-section-up" class="col-md-12 mid-height">
             <div id="edu-profile-general" class="col-md-2 full-height">
                 <div class="panel panel-primary full-height">
                     <div class="panel-heading">
-                        <input type="text" name="username" value="kevin_lebre"></input>
+                        {{ form_widget(form.username) }}
                     </div>
                     <div class="panel-body">
                         <img src="{{ asset('image/kevin_lebre_big.jpg') }}" alt="Profil" />
@@ -14,6 +14,8 @@
                             <i class="fa fa-envelope-o fa-2x col-md-6"></i>
                             <i class="fa fa-user-plus fa-2x col-md-6"></i>
                         </div>
+                        {{ form_widget(form.file) }}
+                        {{ form_widget(form.save) }}
                         <a href="{{ path('fos_user_profile_show') }}" class="btn btn-default btn-xs col-md-12 btn-edu">Enregistrer mon profil</a>
                     </div>
                 </div>
@@ -125,3 +127,4 @@
         </div>
     </div>
 </div>
+{{ form_end(form) }}
