--- a/web/front/less/eduspeak/button.less
+++ b/web/front/less/eduspeak/button.less
@@ -4,10 +4,13 @@ a, button{
     &.btn-edu{
         background-color: @eduspeak-base-purple;
         background-image: none;
-        border-color: white;
+        border: none;
         color: white;
         text-shadow: none;
-        margin: @size-px-5 0;
+        margin: @size-px-10 @size-px-10 @size-px-10 @size-px-10;
+        padding: 15px 32px;
+        text-align: center;
+        font-size: 150%;
     }
 
     &.btn-edu:hover{
