--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -48,14 +48,6 @@ img {
     //color: @eduspeak-base;
 }
 
-//NAVBAR POUR QUE CELA RECOUVRE L'IMAGE PRINCIPALE
-.edu-nav .overheader{
-    z-index: 10;
-    /* background: #fff; */
-    width: 100%;
-    position: absolute;
-    /* opacity: 0.5;*/
-}
 
 .edu-justify {
     text-align: justify;
@@ -90,5 +82,10 @@ img {
       position: absolute;
       opacity: 0.4;
       top: 0;
+    }
+
+  //Le slogan de speakit
+  .slogan{
+      font-size: -webkit-xxx-large;
     }
 }
