Chat with token discussion

--- a/web/front/less/eduspeak/discussion.less
+++ b/web/front/less/eduspeak/discussion.less
@@ -44,15 +44,28 @@
             overflow-y: auto;
             background: transparent;
             border: none;
+            min-height: 80vh;
+            padding: 0 7em 0 7em;
             .panel-body {
                 #chat_room {
                     li {
                         text-decoration: none;
                         list-style: none;
                         background-repeat: no-repeat;
-                        padding-left: 8%;
                     }
                 }
+            }
+
+            .mine{
+                background-color: green;
+                color: white;
+                text-align: right;
+                margin-left: 50%;
+                margin-right: 17em;
+            }
+
+            .his{
+                margin-right: 50%;
             }
         }
     }
