--- a/web/front/less/eduspeak/buddies.less
+++ b/web/front/less/eduspeak/buddies.less
@@ -31,6 +31,19 @@
 
 .matching{
   padding: 10px;  margin: 5px;
+    li{
+        list-style: none;
+    }
+    li:nth-child(odd){
+        background-color: #efefef;
+    }
+    .btn, h4, .start-conversation{
+        display: inline-block;
+    }
+    .start-conversation{
+        padding: 1rem;
+        float: right;
+    }
 
 }
 
@@ -67,4 +80,3 @@ display:inline;
   top: 30%;
   right: 25%;
 }
-
