--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,7 +38,13 @@
                                     <li><a href="#">Mes compagnons</a></li>
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle no-padding-vertical" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                            <img class="profile-picture" src="{{ app.user.facebookPicture }}" alt="Profil" />
+                                            {% if app.user.facebookPicture %}
+                                                <img class="profile-picture" src="{{ app.user.facebookPicture }}" alt="Profil" />
+                                            {% elseif app.user.file %}
+                                                <img class="profile-picture" src="{{ app.user.file }}" alt="Profil" />
+                                            {% else %}
+                                                <i class="fa fa-user fa-3x"></i>
+                                            {% endif %}
                                             {{ app.user.username }}<span class="caret"></span>
                                         </a>
                                         <ul class="dropdown-menu">
