--- a/src/ChatBundle/Resources/views/Discussion/discussion.html.twig
+++ b/src/ChatBundle/Resources/views/Discussion/discussion.html.twig
@@ -7,15 +7,27 @@
             <h2>Discussions</h2>
             <ul class="list-group">
                 {% for discussion in discussions %}
-                    <li class="list-group-item">
+                    <li class="list-group-item" style="min-height: 4em;">
                         <a href="{{ path('chat_display',{'id': discussion.id}) }}">
-                            <img src="{{ asset('image/kevin_lebre_small.jpg') }}" alt="Profil" />
-                            Discussion N°{{ discussion.id }} - Adrien
+                            {% if discussion.participants[1].facebookPicture %}
+                                <img class="profile-picture" src="{{ app.user.facebookPicture }}" alt="Profil" />
+                            {% elseif discussion.participants[1].file %}
+                                <img class="profile-picture" src="{{ app.user.file }}" alt="Profil" />
+                            {% else %}
+                                <i class="fa fa-user fa-3x" style="margin-right: 3rem;"></i>
+                            {% endif %}
+                            <span>{{discussion.participants[1]}}</span>
                         </a>
                     </li>
                 {% endfor %}
+                <li class="list-group-item" style="min-height: 4em;">
+                    <a href="{{ path('edu_speak_search') }}" style="padding-left: 3em;">
+                        <i class="fa fa-weixin fa-2x"></i> Find Someone
+                    </a>
+                </li>
             </ul>
         </div>
+    {% if discussion is defined %}
         <div class="col-md-10 selected-discussions">
             <div class="row">
                 <div class="col-md-12">
@@ -38,51 +50,61 @@
             </div>
         </div>
     </div>
-<script src="https://cdn.pubnub.com/pubnub-dev.js"></script>
-<!-- <script src="{{asset('front/js/eduspeak/chat.js')}}"></script> -->
-<script>
-(function(){
-    "use strict";
-    var PUBNUB_demo = PUBNUB.init({
-        publish_key: 'pub-c-43fee2d2-8fc4-4b00-b424-dd315210e2c2',
-        subscribe_key: 'sub-c-aca4aeda-be98-11e5-8408-0619f8945a4f',
-        secret_key: 'sec-c-YzZhYjVmMTgtYjJmZS00ZTVlLTkwMTMtNWVhZTgyYWEzOTY0'
-    });
-
-    var id_user = Math.floor((Math.random() * 100000) + 1000);
-    var channel = '{{discussion.token}}';
-    PUBNUB_demo.subscribe({
-        channel: channel,
-        message: function(m){
-            display_message(m);
-        }
-    });
-
-    var display_message = function(m){
-        if(m.user == id_user){
-            $("#chat_room").append('<li class="mine alert">'+ m.text +'</li>');
-        }else{
-            $("#chat_room").append('<li class="his alert alert-info">'+ m.text +'</li>');
-        }
-    };
-
-    var send_message = function(){
-        var message = $("#chat_input").val();
-        $("#chat_input").val('');
-        PUBNUB_demo.publish({
-            channel: channel,
-            message: {"text": message, "user": id_user},
-            callback : function(m){console.log(m)}
+    <script src="https://cdn.pubnub.com/pubnub-dev.js"></script>
+    <!-- <script src="{{asset('front/js/eduspeak/chat.js')}}"></script> -->
+    <script>
+    (function(){
+        "use strict";
+        var PUBNUB_demo = PUBNUB.init({
+            publish_key: 'pub-c-43fee2d2-8fc4-4b00-b424-dd315210e2c2',
+            subscribe_key: 'sub-c-aca4aeda-be98-11e5-8408-0619f8945a4f',
+            secret_key: 'sec-c-YzZhYjVmMTgtYjJmZS00ZTVlLTkwMTMtNWVhZTgyYWEzOTY0'
         });
-    };
-    $("#btn_send").click(send_message());
 
-    $(document).keypress(function(e) {
-        if(e.which == 13) {
-            send_message();
-        }
-    });
-})();
+        var id_user = Math.floor((Math.random() * 100000) + 1000);
+        var channel = '{{discussion.token}}';
+        PUBNUB_demo.subscribe({
+            channel: channel,
+            message: function(m){
+                display_message(m);
+            }
+        });
 
-</script>
+        var display_message = function(m){
+            if(m.user == id_user){
+                $("#chat_room").append('<li class="mine alert">'+ m.text +'</li>');
+            }else{
+                $("#chat_room").append('<li class="his alert alert-info">'+ m.text +'</li>');
+            }
+        };
+
+        var send_message = function(){
+            var message = $("#chat_input").val();
+            $("#chat_input").val('');
+            PUBNUB_demo.publish({
+                channel: channel,
+                message: {"text": message, "user": id_user},
+                callback : function(m){console.log(m)}
+            });
+        };
+        $("#btn_send").click(send_message());
+
+        $(document).keypress(function(e) {
+            if(e.which == 13) {
+                send_message();
+            }
+        });
+    })();
+
+    </script>
+    {% else %}
+        <div class="col-md-10 selected-discussions">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="discussion-empty">Select a discussion</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endif %}
 {%  endblock %}
