--- a/web/front/less/eduspeak/discussion.less
+++ b/web/front/less/eduspeak/discussion.less
@@ -68,5 +68,10 @@
                 margin-right: 50%;
             }
         }
+
+        .discussion-empty{
+            margin-top: 22%;
+            text-align: center;
+        }
     }
 }
