add facebook login on login page

--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -66,5 +66,17 @@
             </div>
             <input type="submit" class="btn btn-lg btn-primary btn-block" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
         </form>
+        <div class="row" style="margin-top: 2em;">
+            <div class="col-md-2 col-md-offset-5" style="text-align:center;">
+                <h3>Or</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-2 col-md-offset-5">
+                <a class="btn btn-default" href="/app.php/login/facebook" id="facebook-login">
+                    <i class="fa fa-facebook-official"></i> Login with Facebook
+                </a>
+            </div>
+        </div>
     </div> <!-- /container -->
 {% endblock fos_user_content %}
