--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -76,7 +76,7 @@ img {
     //block noir pour le caroussel
     .monopacite{
       background-color: black;
-      z-index: 7;
+      z-index: @z-index-font-noir-caroussel;
       width: 100%;
       height: 72rem;
       position: absolute;
