--- a/web/front/less/variables.less
+++ b/web/front/less/variables.less
@@ -303,6 +303,7 @@
 @zindex-navbar-fixed:      1030;
 @zindex-modal-background:  1040;
 @zindex-modal:             1050;
+@z-index-font-noir-caroussel: 7;
 
 
 //== Media queries breakpoints
