--- a/web/front/less/variables.less
+++ b/web/front/less/variables.less
@@ -39,7 +39,8 @@
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
 
-@gray-border:           #dce0e0 solid 1px;
+@gray-border:           #dce0e0;
+@eduspeak-gray-border:  @gray-border solid 1px;
 
 //## Site colors
 @eduspeak-base: white;
@@ -319,7 +320,7 @@
 
 // Small screen / tablet
 //** Deprecated `@screen-sm` as of v3.0.1
-@screen-sm:                  768px;
+@screen-sm:                  800px;//768px;
 @screen-sm-min:              @screen-sm;
 //** Deprecated `@screen-tablet` as of v3.0.1
 @screen-tablet:              @screen-sm-min;
