Refonte de la page register
Bug de couleur fond écran passe en gris au bout de qqn secondes

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -193,8 +193,8 @@
     </div>
     <div class="carousel-caption">
       <p class="slogan">Pratiquez comme si vous y étiez</p>
-          <a class="btn btn-default btn-edu" href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
-          <a class="btn btn-default btn-edu" href="{{ path('fos_user_registration_register') }}" role="button">Register</a>
+          <a class="btn btn-default btn-edu btn-accueil" href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
+          <a class="btn btn-default btn-edu btn-accueil" href="{{ path('fos_user_registration_register') }}" role="button">Register</a>
     </div>
   </div>
 
