--- a/web/front/less/bootstrap.less
+++ b/web/front/less/bootstrap.less
@@ -63,4 +63,4 @@
 @import "eduspeak/footer.less";
 @import "eduspeak/profile.less";
 @import "eduspeak/alert.less";
-
+@import "eduspeak/register.less";
