Correction bug register (au niveau de la vue)

--- a/web/front/less/eduspeak/register.less
+++ b/web/front/less/eduspeak/register.less
@@ -1,6 +1,9 @@
 
 #register{
-
+  .col-md-6{
+    top:7em;
+    vertical-align: middle;
+  }
     .form-signin {
         max-width: 330px;
         padding: 15px;
@@ -39,17 +42,4 @@
         width: 100%;
     }
 
-    html, body, .container-table {
-    height: 100%!important;
-  }
-
-  .container-table {
-    display: table;
-    vertical-align: middle;
-  }
-
-.vertical-center-row {
-    display: table-cell;
-    vertical-align: middle;
-  }
 }
