--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -1,18 +1,19 @@
 {% trans_default_domain 'FOSUserBundle' %}
 <div id="register">
-<div class="container container-table">
-    <div class="row vertical-center-row">
-        <div class="col-md-6 col-md-offset-3 text-center">
-                    <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="form-signin">
-                        {{ form_widget(form) }}
-                        <div>
-                            <input  class="btn-default btn btn-edu" type="submit" value="{{ 'registration.submit'|trans }}" />
-                        </div>
-                    </form>
-                    <a class="btn btn-default btn-edu btn-facebook" href="/app.php/login/facebook">
-                        <i class="fa fa-facebook-official"></i> Login with Facebook
-                    </a>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3 text-center jumbotron">
+          <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="form-signin">
+          {{ form_widget(form) }}
+          <div>
+            <input  class="btn-default btn btn-edu" type="submit" value="{{ 'registration.submit'|trans }}" />
+          </div>
+        </form>
+        <p> Or</p>
+        <a class="btn btn-default btn-edu btn-facebook" href="/app.php/login/facebook">
+          <i class="fa fa-facebook-official"></i> REGISTER WITH FACEBOOK
+        </a>
+      </div>
     </div>
   </div>
-</div>
 </div>
