Harmonisation 2.0 de la cohérence login et register
Login a ment un fichier .less comme register importer dans le
bootstrap.less

--- a/web/front/less/bootstrap.less
+++ b/web/front/less/bootstrap.less
@@ -64,3 +64,4 @@
 @import "eduspeak/profile.less";
 @import "eduspeak/alert.less";
 @import "eduspeak/register.less";
+@import "eduspeak/login.less";
