--- a/web/front/less/eduspeak/alert.less
+++ b/web/front/less/eduspeak/alert.less
@@ -7,7 +7,8 @@ ul, li{
         border-color: white;
         color: white;
         text-shadow: none;
-        margin: @size-px-20 0;
+        margin: @size-px-20 0 @size-px-20 25%;
+        text-align: right;
     }
 
     &.alert-edu-invert{
@@ -16,6 +17,7 @@ ul, li{
         border-color: @eduspeak-base-purple;
         color: @eduspeak-base-purple;
         text-shadow: none;
-        margin: @size-px-20 0;
+        margin: @size-px-20 25% @size-px-20 0;
+        text-align: left;
     }
 }
