--- a/web/front/less/eduspeak/button.less
+++ b/web/front/less/eduspeak/button.less
@@ -7,10 +7,13 @@ a, button{
         border: none;
         color: white;
         text-shadow: none;
-        margin: @size-px-10 @size-px-10 @size-px-10 @size-px-10;
-        padding: 15px 32px;
-        text-align: center;
-        font-size: 150%;
+
+        &.btn-accueil{
+            margin: @size-px-10 @size-px-10 @size-px-10 @size-px-10;
+            padding: 15px 32px;
+            text-align: center;
+            font-size: 150%;
+        }
     }
 
     &.btn-edu:hover{
