--- a/src/ChatBundle/Resources/views/Discussion/discussion.html.twig
+++ b/src/ChatBundle/Resources/views/Discussion/discussion.html.twig
@@ -3,36 +3,38 @@
 {% block body %}
     {{ ws_client() }}
     <div id="edu-discussions" class="row">
-        <div class="col-md-2 list-discussions">
-            <h2>Discussions</h2>
+        <div class="col-md-2 col-xs-2 list-discussions">
+            <h5>Discussions</h5>
             <ul class="list-group">
+                <li class="list-group-item">
+                    <a class="list-group-item-search" href="{{ path('edu_speak_search') }}">
+                        <i class="fa fa-weixin fa-2x"></i> Find Someone
+                    </a>
+                </li>
                 {% for discussion in discussions %}
-                    <li class="list-group-item" style="min-height: 4em;">
-                        <a href="{{ path('chat_display',{'id': discussion.id}) }}">
+                    <li class="list-group-item">
+                        <a class="list-group-item-picture" href="{{ path('fos_user_profile_show')}}">
                             {% if discussion.participants[1].facebookPicture %}
                                 <img class="profile-picture" src="{{ app.user.facebookPicture }}" alt="Profil" />
                             {% elseif discussion.participants[1].file %}
                                 <img class="profile-picture" src="{{ app.user.file }}" alt="Profil" />
                             {% else %}
-                                <i class="fa fa-user fa-3x" style="margin-right: 3rem;"></i>
+                                <i class="fa fa-user fa-3x"></i>
                             {% endif %}
+                        </a>
+                        <a class="list-group-item-user" href="{{ path('chat_display',{'id': discussion.id}) }}">
                             <span>{{discussion.participants[1]}}</span>
                         </a>
                     </li>
                 {% endfor %}
-                <li class="list-group-item" style="min-height: 4em;">
-                    <a href="{{ path('edu_speak_search') }}" style="padding-left: 3em;">
-                        <i class="fa fa-weixin fa-2x"></i> Find Someone
-                    </a>
-                </li>
             </ul>
         </div>
     {% if discussion is defined %}
-        <div class="col-md-10 selected-discussions">
+        <div class="col-md-10 col-xs-10 selected-discussions">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12 col-xs-12">
                 </div>
-                <div class="col-md-12">
+                <div class="col-md-12 col-xs-12">
                     <div class="panel panel-default panel-chat">
                         <div class="panel-body">
                             <ul id="chat_room">
@@ -40,10 +42,10 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="input-group col-md-10 col-md-offset-1">
-                        <input type="text" class="form-control" id="chat_input" placeholder="Type text...">
+                    <div class="input-group col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1">
+                        <input type="text" class="form-control" id="chat_input" placeholder="Type a message...">
                         <span class="input-group-btn">
-                            <a class="btn btn-default" id="btn_send">Send!</a>
+                            <a class="btn btn-edu" id="btn_send">Send</a>
                         </span>
                     </div>
                 </div>
@@ -72,9 +74,9 @@
 
         var display_message = function(m){
             if(m.user == id_user){
-                $("#chat_room").append('<li class="mine alert">'+ m.text +'</li>');
+                $("#chat_room").append('<li class="alert alert-edu-invert">'+ m.text +'</li>');
             }else{
-                $("#chat_room").append('<li class="his alert alert-info">'+ m.text +'</li>');
+                $("#chat_room").append('<li class="alert alert-edu">'+ m.text +'</li>');
             }
         };
 
@@ -98,9 +100,9 @@
 
     </script>
     {% else %}
-        <div class="col-md-10 selected-discussions">
+        <div class="col-md-10 col-xs-10 selected-discussions">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12 col-xs-12">
                     <h3 class="discussion-empty">Select a discussion</h3>
                 </div>
             </div>
