correction taille hauteur écran 16/9

--- a/web/front/less/navbar.less
+++ b/web/front/less/navbar.less
@@ -47,6 +47,7 @@
         border-bottom: none!important;
         border-right: @gray-light!important;
         border-width: 1px!important;
+        //LA BARRE DOIT FAIT 58px au lieu de 50
     }
 }
 
