--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -78,10 +78,9 @@ img {
       background-color: black;
       z-index: @z-index-font-noir-caroussel;
       width: 100%;
-      height: 72rem;
+      height: 54.75vw;
       position: absolute;
       opacity: 0.4;
-      top: 0;
     }
 
   //Le slogan de speakit
