Amélioration du "morescroll" page d'accueil

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -38,6 +38,7 @@
             </div>
             <div>
               <a class="more-scroll" href="#choixDestination">"Découvrir de nouveau horizons?!"
+                <br><span style="font-size:3em;" class="glyphicon glyphicon-chevron-down text-align" aria-hidden="true"></span>
               </a>
             </div>
         </div>
@@ -188,6 +189,7 @@
         </div>
         <div>
           <a class="more-scroll" href="#Presentation">"Découvrir SpeakIt!"
+            <br><span style="font-size:3em;" class="glyphicon glyphicon-chevron-down text-align" aria-hidden="true"></span>
           </a>
         </div>
     </div>
