--- a/web/front/less/carousel.less
+++ b/web/front/less/carousel.less
@@ -276,7 +276,7 @@
   //More Scroll
 .more-scroll{
 border: none;
-bottom: 0;
+bottom: 5em;
 font-size: 0.8em;
 height: 8.5em;
 left: 50%;
@@ -291,4 +291,8 @@ color: white;
 text-transform: uppercase;
 width: 16em;
 z-index: 10;
+&:hover,&:visited, &:focus, &:active{
+  color: white;
+  text-decoration: none;
+}
 }
