--- a/web/front/less/eduspeak/discussion.less
+++ b/web/front/less/eduspeak/discussion.less
@@ -8,6 +8,7 @@
         background-color: @gray-lighter;
         h2 {
             text-align: center;
+            margin-bottom: 4rem;
         }
         .list-group {
             border-radius: 0;
@@ -25,13 +26,23 @@
                     margin-bottom: 0;
                 }
                 a {
-                    padding: 17px 167px 20px 0;
+                    .fa-weixin{
+                        padding-top: 1rem;
+                    }
                     color: @gray;
                     text-decoration: none;
                 }
-                a:hover{
+                &:hover{
                     background-color: @eduspeak-base-purple;
-                    color: white;
+                    a{
+                        color: white;
+                    }
+                }
+                &.selected{
+                    background-color: @eduspeak-base-purple;
+                    a{
+                        color: white;
+                    }
                 }
             }
         }
@@ -44,7 +55,7 @@
             overflow-y: auto;
             background: transparent;
             border: none;
-            min-height: 80vh;
+            min-height: 70vh;
             padding: 0 7em 0 7em;
             .panel-body {
                 #chat_room {
@@ -72,6 +83,21 @@
         .discussion-empty{
             margin-top: 22%;
             text-align: center;
+        }
+
+        .discussion-status{
+            >div{
+                min-height: 4em;
+                border-bottom: 0.2rem solid @gray-lighter;
+            }
+            i{
+                vertical-align: 0.5rem;
+                margin-left: 3rem;
+
+                &.fa-circle{
+                    color: green;
+                }
+            }
         }
     }
 }
