--- a/web/front/less/eduspeak/register.less
+++ b/web/front/less/eduspeak/register.less
@@ -1,7 +1,7 @@
 
 #register{
   .col-md-6{
-    top:3em;
+    top:2em;
     vertical-align: middle;
   }
     .form-signin , #fos_user_registration_form_email , #fos_user_registration_form_username
@@ -33,9 +33,11 @@
   }
 
   .jumbotron{
-    background-color: rgba(238, 238, 238, 0.6);
+    background-color: rgba(238, 238, 238, 0.7);
   }
-
+#myjumbotron{
+  padding:0;
+}
 
 
 }
