--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -3,7 +3,7 @@
 <div class="container">
   <img class="img-responsive center-block" src="{{ asset('image/register.jpg') }}" alt="Paris">
     <div class="row">
-        <div class="col-md-6 col-md-offset-3 text-center jumbotron">
+        <div class="col-md-6 col-md-offset-3 text-center jumbotron" id="myjumbotron">
           <h2>Lancez-vous !</h2>
           <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="form-signin">
           {{ form_widget(form) }}
