--- a/web/front/less/eduspeak/login.less
+++ b/web/front/less/eduspeak/login.less
@@ -42,4 +42,22 @@
         width: 100%;
     }
 
+    img{
+      line-height: 1;
+      width: 100vw;
+      height: 54.75vw;
+      position:absolute;
+      z-index:0!important;
+      top:0;
+      left:0;
+    }
+
+    .jumbotron{
+      background-color: rgba(238, 238, 238, 0.7);
+    }
+    
+  #myjumbotron{
+    padding:0;
+  }
+
 }
